# ontio-wasmjit

./: .travis.build.sh  .travis.yml  Cargo.toml
performance/: Cargo.toml
performance/src/: main.rs
performance/test/: sha256.cpp
src/: chain_api.rs  executor.rs  lib.rs
tests/: add.wast
wasmjit-environ/src/: func_environ.rs
wasmjit-runtime/src/: builtins.rs  instance.rs  lib.rs
