[package]
name = "wasmjit-performance"
version = "0.1.0"
authors = ["chenglin <chenglin@onchain.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "wasmjit-performance"
path = "src/main.rs"

[dependencies]
time = "0.2.6"
cranelift-wasm = "0.49.0"
ontio-wasmjit = {path=".."}
ontio-wasmjit-runtime = {path="../wasmjit-runtime"}
wasmjit-capi = {path="../wasmjit-capi"}
